# KhmerOCR

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  recognize.py
